# libjack-node

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
lib/: index.d.ts  index.js  index.ts
src/: jack_client.cpp
test/: sine.ts
